tests/fail/ambiguous_path_resolution.werk
default target = "build"

# Directories should not participate in the lookup that happens as part
# of build recipe matching.
build "bar" {
    info "<out>"
}
build "foo" {
    info "<out>"
}

task build {
    build ["foo", "bar"]
}

#!dir bar
